--- a/client/src/App.css
+++ b/client/src/App.css
@@ -33,8 +33,22 @@ h1 {
     color: white;
     text-shadow: 2px 2px black;
     text-align: center;
-    padding: 30px;
+    padding: 30px 0px 20px 0px;
     font-weight: 800;
+}
+
+h2 {
+    color: white;
+    text-shadow: 2px 2px black;
+    text-align: center;
+    margin: -5px 0px 10px 0px;
+    font-weight: 700;
+}
+h3 {
+    color: white;
+    text-shadow: 2px 2px black;
+    margin: -5px 0px 10px 0px;
+    font-weight: 600;
 }
 
 /*Products Page*/
