--- a/client/src/App.css
+++ b/client/src/App.css
@@ -56,7 +56,7 @@ h3 {
     text-align: center;
     background-color: #eeeeee;
     border: #396bba solid 2px;
-    border-radius: 25%;
+    border-radius: 20px;
     margin: 5px;
 }
 
@@ -99,4 +99,50 @@ h3 {
     width: 125px;
     border-radius: 25%;
     margin: 5px;
+}
+
+/*Shopping Cart*/
+.cart-card {
+    background-color: #eeeeee;
+    border: #396bba solid 2px;
+    border-radius: 10px;
+    padding: 20px;
+    margin: 5px;
+}
+
+.cart-image {
+    background: white;
+    height: 100px;
+    width: 100px;
+    justify-content: center;
+    text-align: center;
+    border: 1px solid #999999;
+    border-radius: 10px;
+}
+
+.cart-name {
+    color: black;
+    font-size: 18px;
+    font-weight: 700;
+    padding: 35px 0px 0px 300px
+}
+
+.cart-price {
+    text-align: right;
+    font-size: 18px;
+    font-weight: 300;
+    padding: 35px 35px 0px 0px
+}
+
+.cart-total {
+    text-align: right;
+    color: white;
+    text-shadow: 2px 2px black;
+    font-weight: 600;
+    font-size: 25px;
+    padding: 15px 35px 0px 0px;
+}
+
+.buy-button {
+    margin: 30px 0px 0px 0px
 }
