--- a/client/src/App.css
+++ b/client/src/App.css
@@ -146,3 +146,17 @@ h3 {
 .buy-button {
     margin: 30px 0px 0px 0px
 }
+
+
+/*Homepage*/
+.homepage-caption {
+    font-size: 3em;
+    margin-top: 6vw;
+    color: white;
+    text-shadow: 2px 2px black;
+    font-weight: 700;
+}
+
+.carousel {
+    margin: 70px 0px 0px 0px;
+}
