--- a/client/src/App.css
+++ b/client/src/App.css
@@ -150,8 +150,8 @@ h3 {
 
 /*Homepage*/
 .homepage-caption {
-    font-size: 3em;
-    margin-top: 6vw;
+    font-size: 2.5em;
+    margin-top: 4vw;
     color: white;
     text-shadow: 2px 2px black;
     font-weight: 700;
@@ -159,4 +159,13 @@ h3 {
 
 .carousel {
     margin: 70px 0px 0px 0px;
+    margin: auto;
+    width: 50vw;
+}
+
+/*Footer*/
+.footer-text {
+    font-size: 11px;
+    color: white;
+    font-weight: 400;
 }
